draft-reschke-webdav-post-07

--- a/draft-reschke-webdav-post-07.html
+++ b/draft-reschke-webdav-post-07.html
@@ -8,7 +8,7 @@
         body {
                 font-family: verdana, charcoal, helvetica, arial, sans-serif;
                 font-size: 85%;
-		max-width: 40em; 
+		max-width: 60em; 
 		color: #000; background-color: #FFF;
                 margin: 2em;
         }
@@ -84,11 +84,11 @@
         p { margin-left: 2em; margin-right: 2em; }
         p.copyright { font-size: x-small; }
         p.toc { font-size: 85%;
-		max-width: 40em; 
+		max-width: 60em; 
 		font-weight: bold; margin-left: 3em; }
         table.toc { margin: 0 0 0 3em; padding: 0; border: 0; vertical-align: text-top; }
         td.toc { font-size: 85%;
-		max-width: 40em; 
+		max-width: 60em; 
 		font-weight: bold; vertical-align: text-top; }
 
         ol.text { margin-left: 2em; margin-right: 2em; }
@@ -121,7 +121,7 @@
         /* RFC-2629 <texttable>s. */
         table.all, table.full, table.headers, table.none {
                 font-size: 85%;
-		max-width: 40em; 
+		max-width: 60em; 
 		text-align: center; border-width: 2px;
                 vertical-align: top; border-collapse: collapse;
         }
@@ -152,10 +152,10 @@
 <table summary="layout" width="66%" border="0" cellpadding="0" cellspacing="0"><tr><td><table summary="layout" width="100%" border="0" cellpadding="2" cellspacing="1">
 <tr><td class="header">Network Working Group</td><td class="header">J. Reschke</td></tr>
 <tr><td class="header">Internet-Draft</td><td class="header">greenbytes</td></tr>
-<tr><td class="header">Intended status: Standards Track</td><td class="header">April 08, 2010</td></tr>
-<tr><td class="header">Expires: October 10, 2010</td><td class="header">&nbsp;</td></tr>
+<tr><td class="header">Intended status: Standards Track</td><td class="header">May 7, 2010</td></tr>
+<tr><td class="header">Expires: November 8, 2010</td><td class="header">&nbsp;</td></tr>
 </table></td></tr></table>
-<h1><br />Using POST to add Members to Web Distributed Authoring and Versioning (WebDAV) Collections<br />draft-reschke-webdav-post-06</h1>
+<h1><br />Using POST to add Members to Web Distributed Authoring and Versioning (WebDAV) Collections<br />draft-reschke-webdav-post-07</h1>
 
 <h3>Abstract</h3>
 
@@ -220,7 +220,7 @@ and may be updated, replaced, or obsoleted by other documents at any time.
 It is inappropriate to use Internet-Drafts as reference material or to cite
 them other than as &ldquo;work in progress.&rdquo;</p>
 <p>
-This Internet-Draft will expire on October 10, 2010.</p>
+This Internet-Draft will expire on November 8, 2010.</p>
 
 <h3>Copyright Notice</h3>
 <p>
@@ -293,12 +293,12 @@ since draft-reschke-webdav-post-03<br />
 since draft-reschke-webdav-post-04<br />
 &nbsp;&nbsp;&nbsp;&nbsp;<a href="#anchor21">A.6.</a>&nbsp;
 since draft-reschke-webdav-post-05<br />
-<a href="#anchor22">Appendix&nbsp;B.</a>&nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp;<a href="#anchor22">A.7.</a>&nbsp;
+since draft-reschke-webdav-post-06<br />
+<a href="#anchor23">Appendix&nbsp;B.</a>&nbsp;
 Resolved issues (to be removed by RFC Editor before publication)<br />
-&nbsp;&nbsp;&nbsp;&nbsp;<a href="#anchor23">B.1.</a>&nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp;<a href="#anchor24">B.1.</a>&nbsp;
 edit<br />
-&nbsp;&nbsp;&nbsp;&nbsp;<a href="#anchor24">B.2.</a>&nbsp;
-collection<br />
 <a href="#rfc.index">&#167;</a>&nbsp;
 Index<br />
 </p>
@@ -528,7 +528,7 @@ Definition of 'Add-Member' URI</h3>
 <p></p>
 <blockquote class="text">
 <p>
-    Note: the "Add-Member" URI can be the identical to the collection's 
+    Note: the "Add-Member" URI can be identical to the collection's 
     URI (in which case the server just advertises the fact that POST to the
     WebDAV collection's URI is supported as defined within this specification).
     But it can also be different from it, in which case it doesn't need to
@@ -641,7 +641,8 @@ Relation to AtomPub's 'Slug' Header Field</h3>
 </p>
 <p>
   The same applies to the extension defined here: clients can use the
-  "Slug" header field as by its definition of a generic HTTP header field. Servers should
+  "Slug" header field, as by definition it is a generic HTTP header
+  field. Servers should
   process it exactly in the way defined by AtomPub.
 
 </p>
@@ -664,6 +665,7 @@ Sample text.
 </p><div style='display: table; width: 0; margin-left: 3em; margin-right: auto'><pre>
 HTTP/1.1 201 Created
 Location: http://example.com/collection/sample%20title
+
 </pre></div>
 <a name="anchor7"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
@@ -704,7 +706,7 @@ Additional Preconditions</h3>
 
 </p>
 <p>
-  The precondition element MAY contain a add-member-uri
+  The precondition element MAY contain an add-member-uri
   XML element specifying the "Add-Member" URI associated with the collection,
   on which the creation of a new child resource was attempted:
 
@@ -757,7 +759,7 @@ Relationship to WebDAV Access Control Protocol</h3>
 
 <p>
   The WebDAV ACL specification requires the DAV:bind privilege to be granted
-  on a collection for the client to be able add new collection members (<a class='info' href='#RFC3744'>[RFC3744]<span> (</span><span class='info'>Clemm, G., Reschke, J., Sedlar, E., and J. Whitehead, &ldquo;Web Distributed Authoring and Versioning (WebDAV) Access Control Protocol,&rdquo; May&nbsp;2004.</span><span>)</span></a>, Section 3.9). Consistent with that, a server
+  on a collection for the client to be able to add new collection members (<a class='info' href='#RFC3744'>[RFC3744]<span> (</span><span class='info'>Clemm, G., Reschke, J., Sedlar, E., and J. Whitehead, &ldquo;Web Distributed Authoring and Versioning (WebDAV) Access Control Protocol,&rdquo; May&nbsp;2004.</span><span>)</span></a>, Section 3.9). Consistent with that, a server
   MUST reject a POST request to the Add-Member URI of a collection unless
   the principal executing the request is granted DAV:bind privilege on the associated
   WebDAV collection resource.
@@ -823,7 +825,7 @@ Acknowledgements</h3>
 
 <p>
   This document has benefited from thoughtful discussion by Cyrus Daboo and
-  Bernard Desruissaux.
+  Bernard Desruisseaux.
 
 </p>
 <a name="rfc.references"></a><br /><hr />
@@ -947,6 +949,15 @@ since draft-reschke-webdav-post-05</h3>
 </p>
 <a name="anchor22"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
+<a name="rfc.section.A.7"></a><h3>A.7.&nbsp;
+since draft-reschke-webdav-post-06</h3>
+
+<p>
+  None yet.
+
+</p>
+<a name="anchor23"></a><br /><hr />
+<table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
 <a name="rfc.section.B"></a><h3>Appendix B.&nbsp;
 Resolved issues (to be removed by RFC Editor before publication)</h3>
 
@@ -955,7 +966,7 @@ Resolved issues (to be removed by RFC Editor before publication)</h3>
           document.
         
 </p>
-<a name="anchor23"></a><br /><hr />
+<a name="anchor24"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
 <a name="rfc.section.B.1"></a><h3>B.1.&nbsp;
 edit</h3>
@@ -965,39 +976,6 @@ edit</h3>
 </p>
 <p>julian.reschke@greenbytes.de (2008-09-22): 
     Umbrella issue for editorial fixes/enhancements.
-  
-</p>
-<a name="anchor24"></a><br /><hr />
-<table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
-<a name="rfc.section.B.2"></a><h3>B.2.&nbsp;
-collection</h3>
-
-<p>
-      Type: change
-</p>
-<p>cyrus@daboo.name (2009-11-05): 
-I have heard from some implementors that they would like collection 
-creation to also be part of this draft. In particular, CalDAV and/or 
-CardDAV clients creating calendars or address books would prefer to leave 
-specification of the resource name to the client.
-<br />
-
-Proposal:
-<br />
-
-- Add a DAV:add-collection property containing a URI (which must be 
-different than DAV:add-member)
-<br />
-- A POST on that URI creates a collection within the parent collection, 
-with a server chosen resource name
-<br />
-- If the POST contains an XML body with DAV:mkcol as the root element, then 
-that body is interpreted the same way as MKCOL ext.
-  
-</p>
-<p>Resolution (2010-04-08): 
-    There was no sufficient interest for adding this feature at this point.
-    Furthermore, this can be defined in a future extension spec when needed.
   
 </p><a name="rfc.index"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
