draft-faltstrom-5892bis-04

--- a/draft-faltstrom-5892bis-04.html
+++ b/draft-faltstrom-5892bis-04.html
@@ -396,12 +396,12 @@
 <td class="right">P. Hoffman, Ed.</td>
 </tr>
 <tr>
-<td class="left">Expires: August 24, 2011</td>
+<td class="left">Expires: September 07, 2011</td>
 <td class="right">VPN Consortium</td>
 </tr>
 <tr>
 <td class="left"></td>
-<td class="right">February 20, 2011</td>
+<td class="right">March 06, 2011</td>
 </tr>
 
     	
@@ -409,7 +409,7 @@
   </table>
 
   <p class="title">The Unicode code points and IDNA - Unicode 6.0<br />
-  <span class="filename">draft-faltstrom-5892bis-03.txt</span></p>
+  <span class="filename">draft-faltstrom-5892bis-04.txt</span></p>
   
   <h1 id="rfc.abstract"><a href="#rfc.abstract">Abstract</a></h1>
 <p>This document specifies IETF consensus for IDNA derived character properties related to the three code points, existing in Unicode 5.2, that changed property values when version 6.0 was released.  The consensus is that no update is needed to RFC 5892 based on the changes made in Unicode 6.0.  </p>
@@ -417,7 +417,7 @@
 <p>This Internet-Draft is submitted in full conformance with the provisions of BCP 78 and BCP 79.</p>
 <p>Internet-Drafts are working documents of the Internet Engineering Task Force (IETF).  Note that other groups may also distribute working documents as Internet-Drafts.  The list of current Internet- Drafts is at http://datatracker.ietf.org/drafts/current/.</p>
 <p>Internet-Drafts are draft documents valid for a maximum of six months and may be updated, replaced, or obsoleted by other documents at any time.  It is inappropriate to use Internet-Drafts as reference material or to cite them other than as "work in progress."</p>
-<p>This Internet-Draft will expire on August 24, 2011.</p>
+<p>This Internet-Draft will expire on September 07, 2011.</p>
 <h1 id="rfc.copyrightnotice"><a href="#rfc.copyrightnotice">Copyright Notice</a></h1>
 <p>Copyright (c) 2011 IETF Trust and the persons identified as the document authors.  All rights reserved.</p>
 <p>This document is subject to BCP 78 and the IETF Trust's Legal Provisions Relating to IETF Documents (http://trustee.ietf.org/license-info) in effect on the date of publication of this document.  Please review these documents carefully, as they describe your rights and restrictions with respect to this document.  Code Components extracted from this document must include Simplified BSD License text as described in Section 4.e of the Trust Legal Provisions and are provided without warranty as described in the Simplified BSD License.</p>
@@ -486,8 +486,8 @@
 <p id="rfc.section.4.p.1">When the algorithm presented in RFC 5892 is applied using the property definitions of Unicode Standard Version 6.0, the result will be different from when it is applied using the property definitions of Unicode 5.2 for the three code points discussed in this document in addition to the changes for code points being unassigned in Unicode 5.2. The three code points are unlikely to occur in internationalized domain names, however, so the security implications of the changes are minor.  </p>
 <h1 id="rfc.section.5">
 <a href="#rfc.section.5">5.</a> Acknowledgements</h1>
-<p id="rfc.section.5.p.1">The main contributors are (in alphabetical order) Eric Brunner-Williams, Vint Cerf, Tina Dam, Martin Duerst, John Klensin, Pete Resnick, Markus Scherer, Andrew Sullivan, Kenneth Whistler and Nicholas Williams.  </p>
-<p id="rfc.section.5.p.2">Mark Davis also contributed to the document, but does not believe the solution for the issues discussed in this document is optimal.  </p>
+<p id="rfc.section.5.p.1">The main contributors are (in alphabetical order) Eric Brunner-Williams, Vint Cerf, Tina Dam, Martin Duerst, John Klensin, Mark Davis, Pete Resnick, Markus Scherer, Andrew Sullivan, Kenneth Whistler and Nicholas Williams.  </p>
+<p id="rfc.section.5.p.2">Not all contributors believe the solution for the issues discussed in this document is optimal.  </p>
 <h1 id="rfc.references">
 <a href="#rfc.references">6.</a> References</h1>
 <h1 id="rfc.references.1">
