draft-ietf-avt-srtp-big-aes-05

--- a/draft-ietf-avt-srtp-big-aes-05.html
+++ b/draft-ietf-avt-srtp-big-aes-05.html
@@ -153,10 +153,10 @@
 <table summary="layout" width="66%" border="0" cellpadding="0" cellspacing="0"><tr><td><table summary="layout" width="100%" border="0" cellpadding="2" cellspacing="1">
 <tr><td class="header">Network Working Group</td><td class="header">D. McGrew</td></tr>
 <tr><td class="header">Internet-Draft</td><td class="header">Cisco Systems, Inc.</td></tr>
-<tr><td class="header">Intended status: Standards Track</td><td class="header">September 15, 2010</td></tr>
-<tr><td class="header">Expires: March 19, 2011</td><td class="header">&nbsp;</td></tr>
+<tr><td class="header">Intended status: Standards Track</td><td class="header">November 29, 2010</td></tr>
+<tr><td class="header">Expires: June 2, 2011</td><td class="header">&nbsp;</td></tr>
 </table></td></tr></table>
-<h1><br />The use of AES-192 and AES-256 in Secure RTP<br />draft-ietf-avt-srtp-big-aes-04.txt</h1>
+<h1><br />The use of AES-192 and AES-256 in Secure RTP<br />draft-ietf-avt-srtp-big-aes-05.txt</h1>
 
 <h3>Abstract</h3>
 
@@ -182,7 +182,7 @@ and may be updated, replaced, or obsoleted by other documents at any time.
 It is inappropriate to use Internet-Drafts as reference material or to cite
 them other than as &ldquo;work in progress.&rdquo;</p>
 <p>
-This Internet-Draft will expire on March 19, 2011.</p>
+This Internet-Draft will expire on June 2, 2011.</p>
 
 <h3>Copyright Notice</h3>
 <p>
@@ -671,20 +671,33 @@ crypto suites and implementations of them.
 IANA Considerations</h3>
 
 <p>
-IANA is expected to assign the following parameters for the SDP Security
-Descriptions crypto suite attribute.
-</p>
-<blockquote class="text">
-<p>  AES_192_CM_HMAC_SHA1_80 
-</p>
-<p>  AES_192_CM_HMAC_SHA1_32 
-</p>
-<p>  AES_256_CM_HMAC_SHA1_80 
-</p>
-<p>  AES_256_CM_HMAC_SHA1_32 
-</p>
-</blockquote><p>
-The cryptosuites are as defined in <a class='info' href='#cryptosuites'>Section&nbsp;4<span> (</span><span class='info'>Crypto Suites</span><span>)</span></a>.
+  IANA is expected to assign the following parameters in the 
+  Session Description Protocol (SDP) Security Descriptions registry.
+
+</p><table class="full" align="center" border="0" cellpadding="2" cellspacing="2">
+<col align="left"><col align="left">
+<tr><th align="left">Crypto Suite Name</th><th align="left">Reference</th></tr>
+<tr>
+<td align="left">  AES_192_CM_HMAC_SHA1_80 </td>
+<td align="left"> [RFCxxxx] </td>
+</tr>
+<tr>
+<td align="left">  AES_192_CM_HMAC_SHA1_32 </td>
+<td align="left"> [RFCxxxx] </td>
+</tr>
+<tr>
+<td align="left">  AES_256_CM_HMAC_SHA1_80 </td>
+<td align="left"> [RFCxxxx] </td>
+</tr>
+<tr>
+<td align="left">  AES_256_CM_HMAC_SHA1_32 </td>
+<td align="left"> [RFCxxxx] </td>
+</tr>
+</table>
+<br clear="all" />
+
+<p>
+Note to RFC Editor: Replace RFCxxx with the number of this RFC.
 
 </p>
 <a name="Security"></a><br /><hr />
