draft-ietf-dime-extended-naptr-08

--- a/draft-ietf-dime-extended-naptr-08.html
+++ b/draft-ietf-dime-extended-naptr-08.html
@@ -424,7 +424,7 @@
   </table>
 
   <p class="title">Diameter S-NAPTR Usage<br />
-  <span class="filename">draft-ietf-dime-extended-naptr-07</span></p>
+  <span class="filename">draft-ietf-dime-extended-naptr-08</span></p>
   
   <h1 id="rfc.abstract"><a href="#rfc.abstract">Abstract</a></h1>
 <p>The Diameter base protocol specifies mechanisms whereby a given realm may advertise Diameter nodes and the supported transport protocol.  However, these mechanisms do not reveal the Diameter applications that each node supports. A peer outside the realm would have to perform a Diameter capability exchange with every node until it discovers one that supports the required application. This document updates  <a href="#RFC3588">[RFC3588]</a> and describes an improvement using an extended format for the Straightforward-Naming Authority Pointer (S-NAPTR) Application Service Tag that allows for discovery of the supported applications without doing Diameter capability exchange beforehand.</p>
@@ -518,7 +518,7 @@
 <pre>
     iana-registered-service = aaa-service / ALPHA *31ALPHANUMSYM
     aaa-service             = "aaa+ap" appln-id
-    appln-id                = DIGIT *DIGIT
+    appln-id                = 1*DIGIT
                               ; Application identifier expressed as a
                               ; decimal integer.
   </pre>
@@ -580,15 +580,24 @@
 <p> </p>
 </dd>
 <dt>c.</dt>
-<dd style="margin-left: 8">If the returned NAPTR service fields contain entries formatted as "aaa:X" where "X" indicates the supported transport protocol(s), the target realm supports Diameter but does not support the extended format for NAPTR-based Diameter peer discovery defined in this document.  <dl>
+<dd style="margin-left: 8">If the returned NAPTR service fields contain entries formatted as "aaa+apX" where "X" indicates the Application Identifier, the target realm supports the extended format for NAPTR-based Diameter peer discovery defined in this document.  <dl>
 <dt></dt>
-<dd style="margin-left: 8">If "X" matches a supported transport protocol, the Diameter implementation resolves the "replacement" field entry to a target host using the lookup method appropriate for the "flags" field.  </dd>
+<dd style="margin-left: 8">If "X" contains the required Application Identifier, the Diameter implementation resolves the "replacement" field entry to a target host using the lookup method appropriate for the "flags" field and attempts to connect using all supported transport protocols following the order specified in section 2.1 of <a href="#RFC3588">[RFC3588]</a>.  </dd>
 <dt></dt>
-<dd style="margin-left: 8">If "X" does not match a supported transport protocol, the Diameter implementation abandons the peer discovery.  </dd>
+<dd style="margin-left: 8">If "X" does not contain the required Application Identifier, the Diameter implementation abandons the peer discovery.  </dd>
 </dl>
 <p> </p>
 </dd>
 <dt>d.</dt>
+<dd style="margin-left: 8">If the returned NAPTR service fields contain entries formatted as "aaa:X" where "X" indicates the supported transport protocol(s), the target realm supports Diameter but does not support the extended format for NAPTR-based Diameter peer discovery defined in this document.  <dl>
+<dt></dt>
+<dd style="margin-left: 8">If "X" matches a supported transport protocol, the Diameter implementation resolves the "replacement" field entry to a target host using the lookup method appropriate for the "flags" field.  </dd>
+</dl>
+<p> </p>
+</dd>
+<dt>e.</dt>
+<dd style="margin-left: 8">If the returned NAPTR service fields contain entries formatted as "aaa", the target realm supports Diameter but does not support the extended format for NAPTR-based Diameter peer discovery defined in this document. The Diameter implementation resolves the "replacement" field entry to a target host using the lookup method appropriate for the "flags" field and attempts to connect using all supported transport protocols following the order specified in section 2.1 of <a href="#RFC3588">[RFC3588]</a>.  </dd>
+<dt>f.</dt>
 <dd style="margin-left: 8">If the target realm does not support NAPTR-based Diameter peer discovery, the client proceeds with the next peer discovery mechanism described in Section 5.2 of <a href="#RFC3588">[RFC3588]</a>.  </dd>
 </dl>
 
