draft-ietf-multimob-pmipv6-base-solution-06

--- a/draft-ietf-multimob-pmipv6-base-solution-06.html
+++ b/draft-ietf-multimob-pmipv6-base-solution-06.html
@@ -155,13 +155,13 @@
 <tr><td class="header">MULTIMOB Group</td><td class="header">T C. Schmidt</td></tr>
 <tr><td class="header">Internet-Draft</td><td class="header">HAW Hamburg</td></tr>
 <tr><td class="header">Intended status: BCP</td><td class="header">M. Waehlisch</td></tr>
-<tr><td class="header">Expires: January 29, 2011</td><td class="header">link-lab &amp; FU Berlin</td></tr>
+<tr><td class="header">Expires: April 28, 2011</td><td class="header">link-lab &amp; FU Berlin</td></tr>
 <tr><td class="header">&nbsp;</td><td class="header">S. Krishnan</td></tr>
 <tr><td class="header">&nbsp;</td><td class="header">Ericsson</td></tr>
-<tr><td class="header">&nbsp;</td><td class="header">July 28, 2010</td></tr>
+<tr><td class="header">&nbsp;</td><td class="header">October 25, 2010</td></tr>
 </table></td></tr></table>
 <h1><br />Base Deployment for
-    Multicast Listener Support in PMIPv6 Domains<br />draft-ietf-multimob-pmipv6-base-solution-05</h1>
+    Multicast Listener Support in PMIPv6 Domains<br />draft-ietf-multimob-pmipv6-base-solution-06</h1>
 
 <h3>Abstract</h3>
 
@@ -195,7 +195,7 @@ and may be updated, replaced, or obsoleted by other documents at any time.
 It is inappropriate to use Internet-Drafts as reference material or to cite
 them other than as &ldquo;work in progress.&rdquo;</p>
 <p>
-This Internet-Draft will expire on January 29, 2011.</p>
+This Internet-Draft will expire on April 28, 2011.</p>
 
 <h3>Copyright Notice</h3>
 <p>
@@ -774,7 +774,10 @@ Message Source and Destination Address</h3>
       define a behavior different from referenced standards in any way.
 </p>
 <p>The interface identifier A-B denotes an interface on node A, which is
-      connected to node B. This includes tunnel interfaces.
+      connected to node B. This includes tunnel interfaces. Destination
+      addresses for MLD/IGMP messages SHALL be as specified in Section 8. of
+      <a class='info' href='#RFC2710'>[RFC2710]<span> (</span><span class='info'>Deering, S., Fenner, W., and B. Haberman, &ldquo;Multicast Listener Discovery (MLD) for IPv6,&rdquo; October&nbsp;1999.</span><span>)</span></a> for MLDv1, and Section 5.1.15. and
+      Section 5.2.14. of <a class='info' href='#RFC3810'>[RFC3810]<span> (</span><span class='info'>Vida, R. and L. Costa, &ldquo;Multicast Listener Discovery Version 2 (MLDv2) for IPv6,&rdquo; June&nbsp;2004.</span><span>)</span></a> for MLDv2.
 </p>
 <a name="anchor13"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
@@ -888,8 +891,6 @@ References</h3>
 <table width="99%" border="0">
 <tr><td class="author-text" valign="top"><a name="I-D.ietf-mboned-auto-multicast">[I-D.ietf-mboned-auto-multicast]</a></td>
 <td class="author-text">Thaler, D., Talwar, M., Aggarwal, A., Vicisano, L., and T. Pusateri, &ldquo;<a href="http://www.ietf.org/internet-drafts/draft-ietf-mboned-auto-multicast-10.txt">Automatic IP Multicast Without Explicit Tunnels (AMT)</a>,&rdquo; draft-ietf-mboned-auto-multicast-10 (work in progress), March&nbsp;2010 (<a href="http://www.ietf.org/internet-drafts/draft-ietf-mboned-auto-multicast-10.txt">TXT</a>).</td></tr>
-<tr><td class="author-text" valign="top"><a name="I-D.zuniga-multimob-smspmip">[I-D.zuniga-multimob-smspmip]</a></td>
-<td class="author-text">Zuniga, J., Lu, G., and A. Rahman, &ldquo;<a href="http://www.ietf.org/internet-drafts/draft-zuniga-multimob-smspmip-03.txt">Support Multicast Services Using Proxy Mobile IPv6</a>,&rdquo; draft-zuniga-multimob-smspmip-03 (work in progress), May&nbsp;2010 (<a href="http://www.ietf.org/internet-drafts/draft-zuniga-multimob-smspmip-03.txt">TXT</a>).</td></tr>
 <tr><td class="author-text" valign="top"><a name="RFC2236">[RFC2236]</a></td>
 <td class="author-text"><a href="mailto:fenner@parc.xerox.com">Fenner, W.</a>, &ldquo;<a href="http://tools.ietf.org/html/rfc2236">Internet Group Management Protocol, Version 2</a>,&rdquo; RFC&nbsp;2236, November&nbsp;1997 (<a href="http://www.rfc-editor.org/rfc/rfc2236.txt">TXT</a>, <a href="http://xml.resource.org/public/rfc/html/rfc2236.html">HTML</a>, <a href="http://xml.resource.org/public/rfc/xml/rfc2236.xml">XML</a>).</td></tr>
 <tr><td class="author-text" valign="top"><a name="RFC5757">[RFC5757]</a></td>
@@ -968,12 +969,12 @@ State of IGMP/MLD Proxy Implementations</h3>
 <a name="rfc.section.C"></a><h3>Appendix C.&nbsp;
 Comparative Evaluation of Different Approaches</h3>
 
-<p>In this section, we briefly evaluate two basic PMIP concepts for
+<p>In this section, we briefly evaluate two orthogonal PMIP concepts for
       multicast traffic organization at LMAs: In scenario A, multicast is
       provided by combined unicast/multicast LMAs as described in this
-      document. Scenario B directs traffic via a dedicated multicast LMA as
-      proposed in <a class='info' href='#I-D.zuniga-multimob-smspmip'>[I&#8209;D.zuniga&#8209;multimob&#8209;smspmip]<span> (</span><span class='info'>Zuniga, J., Lu, G., and A. Rahman, &ldquo;Support Multicast Services Using Proxy Mobile IPv6,&rdquo; May&nbsp;2010.</span><span>)</span></a>, for
-      example.
+      document. Scenario B directs traffic via a dedicated, central multicast
+      router ("LMA-M") that tunnels packets to MAGs independent of unicast
+      hand-offs.
 </p>
 <p>Both approaches do not establish native multicast distribution
       between the LMA and MAG, but use tunneling mechanisms. In scenario A, a
@@ -1042,10 +1043,12 @@ Comparative Evaluation of Different Approaches</h3>
 <p>
 </p><table border="0" cellpadding="0" cellspacing="2" align="center"><tr><td align="center"><font face="monaco, MS Sans Serif" size="1"><b>&nbsp;1,000,000 MNs are subscribed to the same multicast group&nbsp;</b></font><br /></td></tr></table><hr class="insert" />
 
-<p>These considerations of extremal settings show that tunnel
+<p>These considerations of extremal settings show that packet
+      duplication and replication effects apply in changing intensities for
+      different use cases of multicast data services. However, tunnel
       convergence, i.e., duplicate data arriving at a MAG, does cause much
       smaller problems in scalability than the stream replication at LMAs
-      (avalanche problem). For scenario A it should be also noted that the
+      (avalanche problem). For scenario A, it should be also noted that the
       high stream replication requirements at LMAs in setting 1 can be
       attenuated by deploying additional LMAs in a PMIP domain, while scenario
       B does not allow for distributing the LMA-M, as no handover management
@@ -1055,6 +1058,17 @@ Comparative Evaluation of Different Approaches</h3>
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
 <a name="rfc.section.D"></a><h3>Appendix D.&nbsp;
 Change Log </h3>
+
+<p>The following changes have been made from version
+      draft-ietf-multimob-pmipv6-base-solution-05.</p>
+<ol class="text">
+<li>Clarification and section-based reference to destination
+          addresses in MLD in response to WG feedback.
+</li>
+<li>Removed reference to individual draft-zuniga-multimob-smspmip in
+          Appendix C and added explanations in response to WG feedback.
+</li>
+</ol>
 
 <p>The following changes have been made from version
       draft-ietf-multimob-pmipv6-base-solution-04.</p>
